--- a/R/02_clean.qmd
+++ b/R/02_clean.qmd
@@ -1,19 +1,21 @@
 ---
-title: "Cleaning Data"
+title: "02_clean"
 format: html
 editor: visual
 ---
 
+# 02_Clean
+
 ## Loading libraries
 
-```{r, message=FALSE, running=FALSE}
+```{r 02_libraries, message=FALSE, running=FALSE}
 library("tidyverse")
 library("here")
 ```
 
 ## Loading data
 
-```{r, message=FALSE, running=FALSE}
+```{r 02_load_data, message=FALSE, running=FALSE}
 # read in csv files for all cell populations
 
 df_hsc <- read_tsv(file = here("data/01_hsc.tsv.gz"), na="NA")
@@ -31,7 +33,7 @@ df_cmp <- read_tsv(file = here("data/01_cmp.tsv.gz"), na="NA")
 
 There are five dataframes, one for each of the five cell types/stages: hsc, clp, cmp, mep, gmp. They must be joined together into one. We use full join because we wish to preserve all data points.
 
-```{r}
+```{r 02_join_tables}
 
 # do full join to preserve data. The combination of PG.ProteinGroups and PG.Genes is the same for all data frames, so we join by both columns
 
@@ -48,7 +50,7 @@ df_intensities <- df_hsc |>
 
 For increased readability variable names are changed to define the cell type and specify the replicate number. Note! The replicates are technical replicates.
 
-```{r}
+```{r 02_rename}
 # get column names
 print(colnames(df_intensities))
 
@@ -83,7 +85,7 @@ df_intensities <-
 
 There are four or five technical replicates of each of the 5 cell types, making up a total of 21 variables - all with measures of intensity. We use pivot_longer to lengthen the data so that there is one intensity column and one 'sample' column specifying which replicate and which cell type is referred to.
 
-```{r}
+```{r 02_long_format}
 df_intensities <- df_intensities |> 
   pivot_longer(
     #all the replicate columns will be stored in an intensity column and a sample column
@@ -97,7 +99,7 @@ df_intensities <- df_intensities |>
 
 We separate the one column into two columns in order to allow for more flexibility when augmenting the data in 03_augment.
 
-```{r}
+```{r 02_seperate}
 df_intensities <- df_intensities |> 
   separate(sample, into = c("cell_type","replicate_n"), sep = "_rep_")
   
@@ -108,14 +110,14 @@ df_intensities <- df_intensities |>
 
 Here's a snippet of how the long format of the proteomics data is organized
 
-```{r}
+```{r 02_example}
 sample_n(df_intensities,10)
 
 ```
 
 ## Write to tsv
 
-```{r}
+```{r 02_save_data}
 
 # produce file 02_df_intensities.tsv
 # Directing pathway to store the .tsv  file
